--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -10,3 +10,17 @@ jobs:
       - name: say hello
         run: |
           echo "hello world"
+
+  date_now:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: now it is
+        run: |
+          echo date
+
+  display_content:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: repo contains
+        run: |
+          echo ls
