--- a/.github/workflows/deploy_pipline.yml
+++ b/.github/workflows/deploy_pipline.yml
@@ -1,10 +1,10 @@
-name: Check Lint
+name: Deploy
 on:
   push:
     branches:
       - master
 jobs:
-  check_lint_job:
+  deploy_job:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
