--- a/.github/workflows/deploy_pipline.yml
+++ b/.github/workflows/deploy_pipline.yml
@@ -19,8 +19,9 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-      - uses: akhileshns/heroku-deploy@v3.12.12
-          with:
-            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-            heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-            heroku_email: ${{secrets.HEROKU_EMAIL}}
+      - name: deploy to heroku   
+        - uses: akhileshns/heroku-deploy@v3.12.12
+            with:
+              heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+              heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+              heroku_email: ${{secrets.HEROKU_EMAIL}}
