--- a/.github/workflows/deploy_pipline.yml
+++ b/.github/workflows/deploy_pipline.yml
@@ -25,5 +25,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-          healthcheck: "https://%{secrets.HEROKU_APP_NAME}.herokuapp.com/health"
+          healthcheck: "https://intense-falls-24873.herokuapp.com/health"
           checkstring: "ok"
